<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    tools:context="com.example.authenticationapp.">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_a_profile"
        android:textAllCaps="false"
        android:textColor="#46AC3C"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:background="#00000000"
        android:ems="10"
        android:autofillHints="autofill_type_gender"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:background="#00000000"
        android:ems="10"
        android:autofillHints="autofill_type_email_address2"
        android:hint="@string/email2"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFFFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:background="#00000"
        android:ems="10"
        android:autofillHints="autofill_type_phone"
        android:hint="@string/phone2"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:background="#00000000"
        android:ems="10"
        android:autofillHints="autofill_type_full_name"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/address"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:background="#00000000"
        android:ems="10"
        android:autofillHints="autofill_type_address"
        android:hint="@string/address"
        android:inputType="textMultiLine|textNoSuggestions"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/password"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:background="#00000000"
        android:ems="10"
        android:autofillHints="autofill_type_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#333333"
        android:text="Done"
        app:backgroundTint="@color/dark_green"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/already_registered_login_here"
        android:textColor="#00000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>